# ChangeLog for squashmount

*squashmount-8.3
	Martin Väth <martin at mvath.de>:
	- Fix some typos in manpage/examples introduced in 8.2
	- Cosmetical code rearrangements

*squashmount-8.2
	Martin Väth <martin at mvath.de>:
	- use Exporter instead of manual manipulation of symbol glob table
	- more compatible indirect call syntax

*squashmount-8.1
	Martin Väth <martin at mvath.de>:
	- Remove $rundir and $query from advanced configuration, and expose
	  less details than in 8.0 to ensure stability with future versions.
	  Instead:
	- Provide have_stored_data(mountpoint)
	- Introduce callback functionality to store user-defined data
	- Introduce $storing (with side effects! Change also $locking!)
	- export output functions info, warning, error, errorinfo, fatal
	  to configuration file (and use them for errors in that file)
	- Full custom example with a "variable" custom FILE
	- code cleanup: always use explicit package names, no imports

*squashmount-8.0
	Martin Väth <martin at mvath.de>:
	- Add possibilities for advanced configuration like conditional
	  mount-points (e.g. for cds),
	- Add options -a --arg
	- Provide @ARGV, $command, $query, $rundir for configuration file
	- manpage: Add section "ADVANCED CONFIGURATION"
	- Add example to etc/squashmount.pl about CD mount-points
	- Add example about conditionals based on host-name
	- Improve parsing of configuration file
	- Document that configuration files must finish with a true expression

*squashmount-7.12
	Martin Väth <martin at mvath.de>:
	- Introduce a 4th verbose level to make external tools more verbose
	- Do not suppress output in 3rd verbose level
	- Further minor code cleanup

*squashmount-7.11
	Martin Väth <martin at mvath.de>:
	- code cleanup (prefer // over defined())

*squashmount-7.10
	Martin Väth <martin at mvath.de>:
	- Fix @umount{,_ro} and UMOUNT{,_RO} (they had swapped their meaning)

*squashmount-7.9
	Martin Väth <martin at mvath.de>:
	- Include @umount{,_ro} in examples

*squashmount-7.8